--- a/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
@@ -155,3 +155,60 @@
 #HeroSelectionRow2 {
 	margin-bottom: 20px;
 }
+
+
+/* Scenario selection */
+#ScenarioSelectionContainer {
+	horizontal-align: center;
+	flow-children: right;
+}
+
+
+.ScenarioSelectionButton {
+	width: 300px;
+	height: 50px;
+
+	box-shadow: fill #00000090 0px 0px 2px 2px;
+	background-color: gradient( linear, 0% 0%, 0% 100%, from( #066319 ), to( #103F19 ) );
+	background-size: 280px 120px;
+}
+
+.ScenarioSelectionButton.disabled, .ScenarioSelectionButton.disabled:hover, .ScenarioSelectionButton.disabled:active {
+	background-color: gradient( linear, 0% 0%, 0% 100%, from( #9C9C9C ), to( #D1D1D133 ) );
+}
+
+.ScenarioSelectionButton:hover {
+	background-color: gradient( linear, 0% 0%, 0% 100%, from( #6FDE75 ), to( #87d69533 ) );
+}
+
+.ScenarioSelectionButton:active {
+	pre-transform-scale2d: 1.05;
+}
+
+.ScenarioSelectionButton Label {
+	horizontal-align: center;
+	vertical-align: center;
+	color: #ffffff;
+	font-size: 36px;
+}
+
+.ScenarioSelectionLabelPlayer {
+	width: 100%;
+	align: center center;
+	text-align: center;
+	height: 24px;
+	margin-top: 6px;
+	margin-bottom: 6px;
+	font-size: 18px;
+	color: #FFFFFF;
+	opacity: 1;
+}
+
+.ScenarioSelectionColumn {
+	flow-children: down;
+
+	margin-top: 8px;
+	margin-bottom: 8px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
