Scenario selection UI cleanup

--- a/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
@@ -42,7 +42,8 @@
 
 #TimeSelectionTitle,
 #HeroSelectionTitle,
-#HeroSelectionTitleLoading
+#HeroSelectionTitleLoading,
+#ScenarioDescriptionName
 {
 	horizontal-align: center;
 	margin-top: 5%;
