--- a/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
@@ -222,3 +222,11 @@
 	margin-left: 10px;
 	margin-right: 10px;
 }
+
+#ScenarioDescriptionTxt
+{
+	horizontal-align: center;
+	margin-top: 5%;
+	font-size: 20px;
+	color: #FFFFFF;
+}
