--- a/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
@@ -51,6 +51,14 @@
 	color: #FFFFFF;
 }
 
+.teamName
+{
+	horizontal-align: left;
+	margin-top: 5%;
+	font-size: 44px;
+	color: #FFFFFF;
+}
+
 #HeroSelectionGameTime
 {
 	horizontal-align: center;
