Make simpler to debug (smaller black screen)

--- a/content/dota_skirmish/panorama/layout/custom_game/game_setup/game_setup.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/game_setup/game_setup.css
@@ -81,3 +81,12 @@
 {
 	vertical-align: center;
 }
+
+#game_setup
+{
+	vertical-align: center; 
+	horizontal-align: center; 
+	width: 50%; 
+	height: 50%; 
+	background-color: #000000FF;
+}
