--- a/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
+++ b/content/dota_skirmish/panorama/layout/custom_game/hero_selection/hero_selection.css
@@ -389,6 +389,7 @@
 	font-weight: bolder;
 	font-size: 15px;
 	color: #FFFFFF;
+	font-family: Arial,Gulim,MingLiU;
 }
 
 .ScenarioSelectionDescription {
