Added a label to notify this game can not be spectated
- Also attempting to hide connection label

--- a/content/panorama/styles/custom_game/custom_loading_screen.css
+++ b/content/panorama/styles/custom_game/custom_loading_screen.css
@@ -5,3 +5,13 @@
 	background-size: cover;
 	background-image: url("file://panorama/imgs/loading_screen_bg.png");
 }
+
+.SpectatorLabel {
+	color: #FFFFFF;
+	font-size: 40px;
+	font-weight: bold;
+	text-align: center;
+	align: center center;
+
+	visibility: collapse;
+}
